tests/language_modules/16_control_flow_edges/valid/return_after_if_without_else.vf
module Control.ReturnAfterIf

function normalize(amount: Integer) returns Integer
is
    if amount < 0 then
        check amount < 0
    end if
    return amount
end normalize

end Control.ReturnAfterIf