tests/language_modules/16_control_flow_edges/invalid_semantics/case_branch_local_not_visible_after.vf
module Control.CaseScopeAfter

procedure main()
is
    let choice: Integer = 1
    case choice is
        when 1 =>
            let branch_total: Integer = 1
            check branch_total = 1
        default =>
            check true
    end case
    check branch_total = 1
end main

end Control.CaseScopeAfter